<resources>
    <string name="app_name">Qwez</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="no_of_quesion">%1$s/%1$s</string>
    <string name="label_startactivity">My Games</string>
    <string name="loading">Loading...</string>
    <string name="label_loginactivity">Login/Signup</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_label">Don\'t have an account yet? Sign up!</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_nickname_hint">Enter Nickname</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="enter_password_again_hint">Enter Password Again</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="settings">Settings</string>
    <string name="choose_a_category">Choose a category:</string>
    <string name="choose_difficulty">Choose difficulty</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="err_text_dialog">Please choose a category and a difficulty</string>
    <string name="enter_old_pass">Enter old pass</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="default_notification_channel_id">Qwez</string>
    <string name="enter_password">Enter password</string>
    <string name="start_question_button">Start</string>
    <string name="answered_0_10">Answered 0/10</string>
    <string name="continue_button">Continue</string>
</resources>
